<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.redpanda4552</groupId>
    <artifactId>HifumiBot</artifactId>
    <version>4.1.2</version>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency Versions -->
        <jda.version>5.0.0-beta.21</jda.version> <!-- https://mvnrepository.com/artifact/net.dv8tion/JDA -->
        <slf4j.version>2.0.12</slf4j.version> <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <jsoup.version>1.17.2</jsoup.version> <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
        <commonslang.version>3.14.0</commonslang.version> <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <commonstext.version>1.11.0</commonstext.version> <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
        <gson.version>2.10.1</gson.version> <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <snakeyaml.version>2.2</snakeyaml.version> <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
        <dnsjava.version>3.5.3</dnsjava.version> <!-- https://mvnrepository.com/artifact/dnsjava/dnsjava -->
        <deepl.version>1.4.0</deepl.version> <!-- https://mvnrepository.com/artifact/com.deepl.api/deepl-java -->
        <mysql.version>8.3.0</mysql.version> <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
        <hikari.version>5.1.0</hikari.version> <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
        
        <!-- Maven Plugin Versions -->
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
        <maven-shade-plugin.version>3.5.2</maven-shade-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
    </properties>
    
    <build>
        <plugins>
            <!-- Handles Manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>io.github.redpanda4552.HifumiBot.HifumiBot</mainClass>
                            <!-- Allows version info from here to be put into MANIFEST.mf. -->
                            <!-- Allows code to later look up the version. -->
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
                
            <!-- Makes a shaded jar with internalized dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <repositories>
        <!-- Provides JDA -->
        <repository>
		    <id>dv8tion</id>
		    <name>m2-dv8tion</name>
		    <url>https://m2.dv8tion.net/releases</url>
		</repository>
    </repositories>
    
    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>
        
        <!-- JDA uses internally for its logging -->
        <dependency>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
	        <version>${slf4j.version}</version>
        </dependency>

        <dependency>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-simple</artifactId>
	        <version>${slf4j.version}</version>
        </dependency>
        
        <dependency>
	        <groupId>org.jsoup</groupId>
	        <artifactId>jsoup</artifactId>
	        <version>${jsoup.version}</version>
        </dependency>
            
        <dependency>
	        <groupId>org.apache.commons</groupId>
	        <artifactId>commons-lang3</artifactId>
	        <version>${commonslang.version}</version>
        </dependency>
        
        <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>${commonstext.version}</version>
		</dependency>
        
        <dependency>
	        <groupId>com.google.code.gson</groupId>
	        <artifactId>gson</artifactId>
	        <version>${gson.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>
        
        <dependency>
            <groupId>dnsjava</groupId>
            <artifactId>dnsjava</artifactId>
            <version>${dnsjava.version}</version>
        </dependency>

        <dependency>
            <groupId>com.deepl.api</groupId>
            <artifactId>deepl-java</artifactId>
            <version>${deepl.version}</version>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikari.version}</version>
         </dependency>
    </dependencies>
  
</project>